# nats-time-server

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  compose-time-server.yaml  pyproject.toml
.github/workflows/: begin_release_flow.yaml  build_docker_image.yaml  build_helm_chart.yaml
charts/: values.yaml
charts/nats-time-server/: Chart.yaml  README.md  values.yaml
charts/nats-time-server/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
docker/: Dockerfile  docker-entrypoint.sh
src/nats_time_server/: config.py  config.yaml  logging.yaml  register_tasks.py  start_api.py
src/nats_time_server/api/: time.py  types.py
